--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.0",
     "lucide-react": "^0.447.0",
     "openai": "^4.67.1",
+    "pdfkit": "^0.15.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
