--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@anthropic-ai/sdk": "^0.27.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-pdf/renderer": "^4.0.0",
     "@vitejs/plugin-react": "^4.3.2",
     "anthropic": "^0.0.0",
     "autoprefixer": "^10.4.20",
