--- a/package.json
+++ b/package.json
@@ -1,36 +1,22 @@
 {
-  "name": "fairytalewiz",
+  "name": "fairytale-generator",
   "version": "1.0.0",
+  "type": "module",
+  "description": "A personalized fairytale generator for children using Node.js, with AI-generated stories and images",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.27.3",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@react-pdf/renderer": "^4.0.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "anthropic": "^0.0.0",
-    "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
+    "@anthropic-ai/sdk": "^0.10.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "lucide-react": "^0.447.0",
-    "openai": "^4.67.3",
-    "postcss": "^8.4.47",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.4.8"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "openai": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
