--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm run build && node server.js",
+    "build": "cd client && npm run build",
+    "dev": "concurrently \"npm run start\" \"cd client && npm run dev\"",
+    "deploy": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -29,5 +31,8 @@
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^5.4.8"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
