--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run build && node server.js",
     "build": "cd client && npm run build",
     "dev": "concurrently \"npm run start\" \"cd client && npm run dev\"",
-    "deploy": "npm run build && npm run start"
+    "deploy": "npm run build && node deploy.js"
   },
   "keywords": [],
   "author": "",
