--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vite": "^5.4.8"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "kill-port": "^2.0.1"
   }
 }
