--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "lucide-react": "^0.447.0",
     "openai": "^4.67.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
