--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "express": "^4.21.0",
+    "firebase": "^11.0.1",
+    "firebase-admin": "^12.6.0",
     "lucide-react": "^0.447.0",
     "openai": "^4.67.1",
     "postcss": "^8.4.47",
