--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@anthropic-ai/sdk": "^0.27.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.45.6",
     "@vitejs/plugin-react": "^4.3.2",
     "anthropic": "^0.0.0",
     "autoprefixer": "^10.4.20",
