--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "description": "",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.3",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/supabase-js": "^2.45.6",
     "@vitejs/plugin-react": "^4.3.2",
     "anthropic": "^0.0.0",
@@ -28,7 +31,8 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.2",
+    "react-router-dom": "^6.27.0",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^5.4.8"
