--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build && node server.js",
+    "start": "node server.js",
     "build": "cd client && npm run build",
-    "dev": "concurrently \"npm run start\" \"cd client && npm run dev\"",
+    "build:client": "cd client && npm run build",
+    "dev:server": "node server.js",
+    "dev:client": "cd client && npm run dev",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "deploy": "npm run build && node deploy.js"
   },
   "keywords": [],
