--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run build && node server.js",
     "build": "cd client && npm run build",
-    "build:client": "cd client && npm run build",
-    "dev:server": "node server.js",
-    "dev:client": "cd client && npm run dev",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
+    "dev": "concurrently \"npm run start\" \"cd client && npm run dev\"",
+    "deploy": "npm run build && node deploy.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +17,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.0.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/supabase-js": "^2.45.6",
     "@vitejs/plugin-react": "^4.3.2",
