--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "npm run build && node server.js",
-    "build": "cd client && npm run build",
-    "dev": "concurrently \"npm run start\" \"cd client && npm run dev\"",
-    "deploy": "npm run build && node deploy.js"
+    "start": "node server.js",
+    "dev": "concurrently \"node server.js\" \"cd client && npm run dev\""
   },
   "keywords": [],
   "author": "",
@@ -17,28 +15,22 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@supabase/supabase-js": "^2.45.6",
-    "@vitejs/plugin-react": "^4.3.2",
-    "anthropic": "^0.0.0",
-    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "express": "^4.21.0",
     "lucide-react": "^0.447.0",
     "openai": "^4.67.1",
-    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.4.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
-    "kill-port": "^2.0.1"
+    "concurrently": "^8.2.2"
   }
 }
