--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "description": "",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.3",
+    "@leonardo-ai/sdk": "^4.18.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.0.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.45.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "express": "^4.21.0",
     "lucide-react": "^0.447.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.67.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
